# sandsim

./: .gitignore  BENCHMARKS.md  LICENSE  MATERIALS.md  Makefile  README.md  WORLD.md  challenges.h  hud.h  hud_meta.h  sceneio.h  scenes.h  ui.h  worldgen.h
bash/: README.md  sandsim.sh
c/: Makefile  README.md  sandsim.c  sandsim_materials.c  sandsim_world.c
cpp/: Makefile  README.md  materials.h  sandsim_avx2.cpp  sandsim_avx_mb.cpp  sandsim_avx_sb.cpp  sandsim_materials.cpp  sandsim_materials_avx.cpp  sandsim_materials_sse.cpp  sandsim_neon_mb.cpp  sandsim_scalar_mb.cpp  sandsim_scalar_sb.cpp  sandsim_sse_mb.cpp  sandsim_sse_sb.cpp  sandsim_world.cpp  sandsim_world_avx.cpp  sandsim_world_simd.cpp  sandsim_world_sse.cpp  simd_core.h  world_step.h  world_step_avx.cpp  world_step_sse.cpp
cuda/: Makefile  README.md  sandsim_cuda.cu
hip/: Makefile  README.md  sandsim_hip.cpp
mojo/: README.md  sandsim.mojo
opengl/: Makefile  README.md  sandsim_gl.cpp  sandsim_world_gl.cpp
python/: README.md  sandsim.py  sandsim_materials.py  sandsim_world.py
rust/: Cargo.toml  README.md  build.rs
rust/src/: main.rs  materials.rs  sdl.rs  world.rs
tools/: bench.sh  bench_materials.sh  bench_world.sh  benchmark.sh  test_icicle.cpp  test_laser.cpp  test_rust.cpp  test_seed.cpp
vulkan/: Makefile  README.md  sandsim_vulkan_compute.cpp  sandsim_vulkan_compute_mb.cpp  sandsim_world_vk.cpp
vulkan/shaders/: sand.comp  sand_mb.comp  world.comp
zig/: README.md  sandsim.zig  sandsim_materials.zig  sandsim_world.zig
